--- a/olya/index.html
+++ b/olya/index.html
@@ -73,7 +73,13 @@
     <img src="img/R1-03657-0000.jpg" alt="city">
     <img src="img/R1-03655-0014.jpg" alt="view">
     <img src="img/R1-03655-0016.jpg" alt="signs">
-
+    <img src="img/R1-03655-0025.jpg" alt="olya">
+    <img src="img/R1-03657-0028.jpg" alt="blocks">
+    <img src="img/R1-03655-0000.jpg" alt="vehicle">
+    <img src="img/R1-03655-0001.jpg" alt="vehicle closeup">
+    <img src="img/R1-03626-0034.jpg" alt="signs">
+    <img src="img/R1-03655-0011.jpg" alt="palms">
+    <img src="img/R1-03654-0010.jpg" alt="car">
 
     <p>Stop.</p>
 
@@ -84,9 +90,7 @@
     <img src="img/R1-03626-0027.jpg">
     <img src="img/R1-03626-0030.jpg">
     <img src="img/R1-03626-0032.jpg">
-    <img src="img/R1-03626-0034.jpg">
 
-    <img src="img/R1-03654-0010.jpg">
     <img src="img/R1-03654-0013.jpg">
     <img src="img/R1-03654-0015.jpg">
     <img src="img/R1-03654-0017.jpg">
@@ -97,21 +101,17 @@
     <img src="img/R1-03654-0023.jpg">
     <img src="img/R1-03654-0034.jpg">
 
-    <img src="img/R1-03655-0000.jpg">
-    <img src="img/R1-03655-0001.jpg">
-    <img src="img/R1-03655-0011.jpg">
+
 
     <img src="img/R1-03655-0020.jpg">
     <img src="img/R1-03655-0021.jpg">
     <img src="img/R1-03655-0022.jpg">
     <img src="img/R1-03655-0023.jpg">
-    <img src="img/R1-03655-0025.jpg">
     <img src="img/R1-03655-0032.jpg">
     <img src="img/R1-03655-0033.jpg">
 
 
 
-    <img src="img/R1-03657-0028.jpg">
     <img src="img/R1-03657-0033.jpg">
     <img src="img/R1-03657-0034.jpg">
 
@@ -142,7 +142,7 @@
     var imagesCount = document.images.length;
     const num = document.querySelector('#num');
     const imagesPositions = [];
-    num.innerText = 1 + "/" + imagesCount;
+    num.innerText = imagesCount;
 
     $(window).on('load', function(){
       $("img").each(function() {
