--- a/olya/index.html
+++ b/olya/index.html
@@ -80,39 +80,32 @@
     <img src="img/R1-03626-0034.jpg" alt="signs">
     <img src="img/R1-03655-0011.jpg" alt="palms">
     <img src="img/R1-03654-0010.jpg" alt="car">
+    <img src="img/R1-03654-0018.jpg" alt="houses">
+    <img src="img/R1-03654-0023.jpg" alt="houses">
+    <img src="img/R1-03655-0020.jpg" alt="lena & mark">
+    <img src="img/R1-03654-0017.jpg" alt="sea">
+    <img src="img/R1-03654-0019.jpg" alt="man 1">
+    <img src="img/R1-03654-0020.jpg" alt="man 2">
+    <img src="img/R1-03654-0021.jpg" alt="man 3 & tim">
+    <img src="img/R1-03655-0033.jpg" alt="boats">
+    <img src="img/R1-03655-0032.jpg" alt="boats">
+    <img src="img/R1-03654-0015.jpg" alt="tim">
+    <img src="img/R1-03654-0034.jpg" alt="bush">
+    <img src="img/R1-03655-0021.jpg" alt="road">
+    <img src="img/R1-03657-0033.jpg" alt="boat with people">
+    <img src="img/R1-03655-0022.jpg" alt="curved road">
+    <img src="img/R1-03626-0023.jpg" alt="boats crushed">
 
-    <p>Stop.</p>
-
+    <p>Stop</p>
 
     <img src="img/R1-03626-0017.jpg">
     <img src="img/R1-03626-0018.jpg">
-    <img src="img/R1-03626-0023.jpg">
     <img src="img/R1-03626-0027.jpg">
     <img src="img/R1-03626-0030.jpg">
     <img src="img/R1-03626-0032.jpg">
-
     <img src="img/R1-03654-0013.jpg">
-    <img src="img/R1-03654-0015.jpg">
-    <img src="img/R1-03654-0017.jpg">
-    <img src="img/R1-03654-0018.jpg">
-    <img src="img/R1-03654-0019.jpg">
-    <img src="img/R1-03654-0020.jpg">
-    <img src="img/R1-03654-0021.jpg">
-    <img src="img/R1-03654-0023.jpg">
-    <img src="img/R1-03654-0034.jpg">
 
-
-
-    <img src="img/R1-03655-0020.jpg">
-    <img src="img/R1-03655-0021.jpg">
-    <img src="img/R1-03655-0022.jpg">
     <img src="img/R1-03655-0023.jpg">
-    <img src="img/R1-03655-0032.jpg">
-    <img src="img/R1-03655-0033.jpg">
-
-
-
-    <img src="img/R1-03657-0033.jpg">
     <img src="img/R1-03657-0034.jpg">
 
   </div>
