--- a/olya/index.html
+++ b/olya/index.html
@@ -59,7 +59,6 @@
 
   <div class="content">
 
-    <img src="img/R1-03626-0001.jpg" alt="fish">
     <img src="img/R1-03654-0004.jpg" alt="room">
     <img src="img/R1-03654-0012.jpg" alt="towel">
     <img src="img/R1-03657-0027.jpg" alt="clouds">
@@ -73,6 +72,7 @@
     <img src="img/R1-03657-0000.jpg" alt="city">
     <img src="img/R1-03655-0014.jpg" alt="view">
     <img src="img/R1-03655-0016.jpg" alt="signs">
+    <img src="img/R1-03654-0033.jpg" alt="vehicle">
     <img src="img/R1-03655-0025.jpg" alt="olya">
     <img src="img/R1-03657-0028.jpg" alt="blocks">
     <img src="img/R1-03655-0000.jpg" alt="vehicle">
@@ -89,28 +89,25 @@
     <img src="img/R1-03654-0021.jpg" alt="man 3 & tim">
     <img src="img/R1-03655-0033.jpg" alt="boats">
     <img src="img/R1-03655-0032.jpg" alt="boats">
+    <img src="img/R1-03655-0023.jpg" alt="houses">
     <img src="img/R1-03654-0015.jpg" alt="tim">
     <img src="img/R1-03654-0034.jpg" alt="bush">
     <img src="img/R1-03655-0021.jpg" alt="road">
     <img src="img/R1-03657-0033.jpg" alt="boat with people">
     <img src="img/R1-03655-0022.jpg" alt="curved road">
     <img src="img/R1-03626-0023.jpg" alt="boats crushed">
-
-    <p>Stop</p>
-
-    <img src="img/R1-03626-0017.jpg">
-    <img src="img/R1-03626-0018.jpg">
-    <img src="img/R1-03626-0027.jpg">
-    <img src="img/R1-03626-0030.jpg">
-    <img src="img/R1-03626-0032.jpg">
-    <img src="img/R1-03654-0013.jpg">
-
-    <img src="img/R1-03655-0023.jpg">
-    <img src="img/R1-03657-0034.jpg">
-
+    <img src="img/R1-03626-0027.jpg" alt="boat on side">
+    <img src="img/R1-03626-0032.jpg" alt="dog in water">
+    <img src="img/R1-03657-0034.jpg" alt="terrace">
+    <img src="img/R1-03626-0030.jpg" alt="dog">
+    <img src="img/R1-03654-0013.jpg" alt="tim in the bus">
+    <img src="img/R1-03626-0001.jpg" alt="fish">
+    <img src="img/R1-03626-0018.jpg" alt="legs">
+    <img src="img/R1-03626-0017.jpg" alt="island">
+    <img src="img/R1-last.jpg" alt="fish bus last photo">
   </div>
 
-  <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
+  <footer>&copy;2022, Olya Virich, Krasnodar telegram&nbsp;@olyavirich</footer>
 
   <script>
     /*
