--- a/olya/index.html
+++ b/olya/index.html
@@ -29,6 +29,9 @@
     p { margin: 0 auto 24px auto;  text-align: center; }
     footer {margin: 25vh 0 48px 0}
 
+    a {text-decoration: underline; color: 121214;}
+    a:hover {color: #454546;}
+
     .menu {
       display: block;
       position: fixed;
@@ -107,7 +110,7 @@
     <img src="img/R1-last.jpg" alt="fish bus last photo">
   </div>
 
-  <footer>&copy;2022, Olya Virich, Krasnodar telegram&nbsp;@olyavirich</footer>
+  <footer>&copy;2022, Olya Virich, Krasnodar telegram&nbsp;<a href="https://t.me/viricholya">@olyavirich</a></footer>
 
   <script>
     /*
