--- a/olya/index.html
+++ b/olya/index.html
@@ -110,7 +110,7 @@
     <img src="img/R1-last.jpg" alt="fish bus last photo">
   </div>
 
-  <footer>&copy;2022, Olya Virich, Krasnodar telegram&nbsp;<a href="https://t.me/viricholya">@olyavirich</a></footer>
+  <footer>&copy;2022, Olya Virich, Krasnodar<br>Telegram&nbsp;<a href="https://t.me/viricholya">@olyavirich</a></footer>
 
   <script>
     /*
