--- a/olya/index.html
+++ b/olya/index.html
@@ -29,8 +29,8 @@
     p { margin: 0 auto 24px auto;  text-align: center; }
     footer {margin: 25vh 0 48px 0}
 
-    a {text-decoration: underline; color: 121214;}
-    a:hover {color: #454546;}
+    a {text-decoration: underline; color: #121214;}
+    a:hover {text-decoration: underline dotted;}
 
     .menu {
       display: block;
@@ -110,7 +110,7 @@
     <img src="img/R1-last.jpg" alt="fish bus last photo">
   </div>
 
-  <footer>&copy;2022, Olya Virich, Krasnodar<br>Telegram&nbsp;<a href="https://t.me/viricholya">@olyavirich</a></footer>
+  <footer>&copy;2022, Olya Virich from Krasnodar<br>Telegram&nbsp;<a href="https://t.me/viricholya">@olyavirich</a></footer>
 
   <script>
     /*
