--- a/olya/index.html
+++ b/olya/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ov/bw</title>
+  <title>Virich Türkiye</title>
 
   <meta charset="utf-8">
   <meta name="author" content="Olga Virich">
@@ -52,7 +52,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-  <h1>OV/BW</h1>
+  <h1>Virich</h1>
   <h3>Türkiye</h3>
 
   <div class="menu">
