--- a/anton/index.html
+++ b/anton/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>partdirector</title>
   <style>
-    
+
     @font-face {
       font-family: "btp";
       src: url("btp.woff.ttf") format('woff');
@@ -29,6 +29,10 @@
 </head>
 <body>
   <div class="experience">
+    <h1>Experience</h1>
+    <h2>Yandex Fintech</h2>
+    <h2>Yandex Classifieds</h2>
+    <h2>Infographics Stydio</h2>
   </div>
 </body>
 </html>
