--- a/anton/index.html
+++ b/anton/index.html
@@ -21,6 +21,10 @@
       font-size: 72px;
     }
 
+    h1, h2 {
+      margin-top: 72px;
+    }
+
     .experience {
       text-align: center
     }
@@ -29,10 +33,12 @@
 </head>
 <body>
   <div class="experience">
-    <h1>Experience</h1>
+    <h1>Experience & Clients</h1>
     <h2>Yandex Fintech</h2>
     <h2>Yandex Classifieds</h2>
-    <h2>Infographics Stydio</h2>
+    <h2>Infographics Studio</h2>
+    <h2>Ad Marginem</h2>
+    <h2>16 Tons Club</h2>
   </div>
 </body>
 </html>
