--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>partdirector</title>
   <style>
     * {font-family: inter, helvetica, sans-serif; color: #40403e;}
-    img {width: 70vw;}
+    img {height: 80vh;}
     div {
          display: grid;
          place-items: center;
          align-items: center;
-         height: 98vh;
+         height: 95vh;
        }
   </style>
 </head>
