--- a/gone/index.html
+++ b/gone/index.html
@@ -22,8 +22,18 @@
     <li>07 Saratov</li>
     <li>07 Danilov</li>
     <li>06 Antalya</li>
+    <li>06 Cirali</li>
     <li>06 Amsterdam</li>
+    <li>06 Porto</li>
+    <li>05 Lisbon</li>
+    <li>05 Zurich</li>
+    <li>05 Antalya</li>
+    <li>05 Forte Dei Marmi</li>
+    <li>03–04 Antalya</li>
+    <li>03 Istanbul</li>
   </ul>
+  
+  <h4>2021</h4>
 
   <footer>
     <p>&copy;2022, AP</p>
