--- a/gone/index.html
+++ b/gone/index.html
@@ -32,8 +32,17 @@
     <li>03–04 Antalya</li>
     <li>03 Istanbul</li>
   </ul>
-  
+
   <h4>2021</h4>
+  <ul>
+    <li>11 Kas</li>
+    <li>10 Amsterdam</li>
+    <li>09 Amsterdam</li>
+    <li>09 Sardegna</li>
+    <li>09 Forte Dei Marmi</li>
+    <li>08 Firenze</li>
+
+  </ul>
 
   <footer>
     <p>&copy;2022, AP</p>
