--- a/gone/index.html
+++ b/gone/index.html
@@ -37,11 +37,13 @@
   <ul>
     <li>11 Kas</li>
     <li>10 Amsterdam</li>
+    <li>10 Cherepovets, Sheksna, Sizma</li>
     <li>09 Amsterdam</li>
     <li>09 Sardegna</li>
     <li>09 Forte Dei Marmi</li>
+    <li>08 Lucca</li>
     <li>08 Firenze</li>
-
+    <li>08 Pisa</li>
   </ul>
 
   <footer>
