--- a/gone/index.html
+++ b/gone/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="about">
-  <h1>AP</h1>
+  <h1><a href="https://partdirector.ch/">AP</a></h1>
   <h2>Travel</h2>
 
   <h4>2022</h4>
