--- a/flowers/index.html
+++ b/flowers/index.html
@@ -11,18 +11,6 @@
   <meta name="distribution" content="web">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRPKKVE0HB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'G-FRPKKVE0HB');
-  </script>
 </head>
 
 <body>
@@ -32,8 +20,8 @@
 
   <div class="content">
     <p class="mobileHeader">
-      In my Shadow<br>
-      over the Region
+      Of The<br>
+      World
     </p>
     <img class="imageFirst" src="img/R1-03626-0001.jpg" alt="room">
     <img src="img/R1-03626-0017.jpg" alt="towel">
@@ -42,14 +30,8 @@
   </div>
 
   <footer>
-    <p>Olya Virich, photographer, 31, born and raised in Krasnodar (Russian&nbsp;south).</p>
-    <p>There was no photography department in the city, so&nbsp;she graduated from Krasnodar State Institute of&nbsp;Culture with a&nbsp;degree in&nbsp;graphic&nbsp;design.</p>
-    <p>She started taking photos in&nbsp;2004. She has been working as&nbsp;a&nbsp;commercial photographer since&nbsp;2012.</p>
-    <p>Participant of solo and group exhibitions in Russia, Czech Republic, Finland and&nbsp;France.</p>
-    <p>Olya is the winner of Grand Prize winner of 5th Annual Photo Annual Awards. Her works were published in the "Out of the phone" photobook as well as in international ad campaigns. She has participated in the international portfolio-review in&nbsp;Moscow.</p>
-    <p>In an attempt to find her own reflection, Olya scrutinizes everyday life. Her main tools are light, color&nbsp;and&nbsp;poetry.</p>
-    <p>&copy;2022, Olya Virich<br>
-    Telegram&nbsp;<a href="https://t.me/viricholya">@viricholya</a></p>
+    <p>Long story short.</p>
+    <p>&copy;2022, Anton Prokopev</p>
   </footer>
 
   <script>
