--- a/flowers/index.html
+++ b/flowers/index.html
@@ -11,6 +11,7 @@
   <meta name="distribution" content="web">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
