--- a/flowers/index.html
+++ b/flowers/index.html
@@ -25,8 +25,11 @@
       World
     </p>
     <img class="imageFirst" src="img/R1-03626-0001.jpg" alt="room">
+    <p>Caption</p>
     <img src="img/R1-03626-0017.jpg" alt="towel">
+    <p>Caption</p>
     <img src="img/R1-03626-0018.jpg" alt="clouds">
+    <p>Caption</p>
 
   </div>
 
