--- a/flowers/index.html
+++ b/flowers/index.html
@@ -24,12 +24,8 @@
       Of The<br>
       World
     </p>
-    <img class="imageFirst" src="img/R1-03626-0001.jpg" alt="room">
-    <p>Caption</p>
-    <img src="img/R1-03626-0017.jpg" alt="towel">
-    <p>Caption</p>
-    <img src="img/R1-03626-0018.jpg" alt="clouds">
-    <p>Caption</p>
+    <img class="imageFirst" src="img/DSCF3131-2.jpg" alt="room">
+    <p>Limonium sinuatum?</p>
 
   </div>
 
