--- a/flowers/index.html
+++ b/flowers/index.html
@@ -24,7 +24,7 @@
       Of The<br>
       World
     </p>
-    <img class="imageFirst" src="img/DSCF3131-2.jpg" alt="room">
+    <img class="imageFirst" src="img/DSCF3131-2.jpg" alt="">
     <p>Limonium sinuatum?</p>
 
   </div>
