--- a/flowers/index.html
+++ b/flowers/index.html
@@ -21,12 +21,16 @@
 
   <div class="content">
     <p class="mobileHeader">
-      Of The<br>
-      World
+      Of The World
     </p>
     <img class="imageFirst" src="img/DSCF3131-2.jpg" alt="">
     <p>Limonium sinuatum?</p>
 
+    <img src="img/DSCF3131-2.jpg" alt="">
+    <p>Limonium sinuatum?</p>
+
+    <img src="img/DSCF3131-2.jpg" alt="">
+    <p>Limonium sinuatum?</p>
   </div>
 
   <footer>
