--- a/flowers/index.html
+++ b/flowers/index.html
@@ -24,9 +24,9 @@
       Of The World
     </p>
     <img class="imageFirst" src="img/DSCF3131-2.jpg" alt="">
-    <p>Limonium sinuatum?</p>
+    <p>Limonium sinuatum</p>
 
-    <img src="img/DSCF3131-2.jpg" alt="">
+    <img src="img/DSCF3119.jpg" alt="">
     <p>Limonium sinuatum?</p>
 
     <img src="img/DSCF3131-2.jpg" alt="">
