--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
       <div id="typo">Typography</div>
       <div id="other">Other</div>
     </div>
-    <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classifieds industries.</p><p>Anton is responsible for brand developing and brand keeping for companies and individuals.</p>
+    <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classifieds industries.</p>
+    <p>Anton is responsible for brand developing and brand keeping for companies and individuals.</p>
+    <p>Currently in Yandex.</p>
 
     <footer>
       <a href="https://linkedin.com/in/prokopev/">Linkedin</a>,
