--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         font-size: 2vw;
         padding: 0;
         margin-top: 2.5vw;
-        max-width: 45vw;
+        width: 45vw;
         display: block;
       }
 
@@ -31,11 +31,10 @@
         margin-top: 0;
       }
 
-
       .container {
         margin-top: 2.5vw;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 2.5vw;
       }
 
@@ -52,21 +51,10 @@
       footer {
         display: block;
         bottom: 2.5vw;
-        left: 2.5 vw;
         position: fixed;
-
-      }
-
-      #cv {
-        margin-top: 2.5vw;
-        display: block;
-        background: #f3f3f3;
-        padding: 2.5vw;
-        aspect-ratio: 1;
       }
 
       @media screen and (max-width: 1024px) {
-
         * {
           font-size: 10vw;
         }
@@ -81,12 +69,17 @@
         }
 
         h1, h2 {
-          margin: 0 0 5vw 0;
+          margin: 0;
+        }
+
+        h1 {
+          margin-bottom: 70vw;
         }
 
         p {
+          display: block;
           font-size: 5vw;
-          width: 90vw;
+          width: 90vw !important;
           margin-top: 5vw;
         }
 
@@ -154,9 +147,9 @@
       <div id="typo">Typography</div>
       <div id="other">Other</div>
     </div>
-    <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classifieds industries.</p>
-    <p>Anton is responsible for brand developing and brand keeping for companies and individuals.</p>
-    <p>Currently in Yandex.</p>
+
+    <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classifieds industries. He is responsible for brand developing and brand keeping for companies and individuals.</p>
+    <p>Currently in Yandex Fintech.</p>
 
     <footer>
       <a href="https://linkedin.com/in/prokopev/">Linkedin</a>,
