--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="utf-8">
     <title></title>
     <style>
+      @font-face {
+      	font-family: 'Aeroport';
+      	src: url('Aeroport-regular.eot');
+      	src:
+      	     url('Aeroport-regular.eot?#iefix') format('embedded-opentype'),
+      	     url('Aeroport-regular.woff2') format('woff2'),
+      	     url('Aeroport-regular.woff') format('woff'),
+      	     url('Aeroport-regular.ttf') format('truetype'),
+      	     url('Aeroport-regular.svg#Aeroport') format('svg');
+      	font-weight: normal;
+      	font-style: normal;
+      }
+
       body {
         margin: 2.5vw;
         padding: 0;
@@ -11,7 +24,7 @@
       }
 
       * {
-        font-family: "Inter", "helvetica", sans-serif;
+        font-family: "Aeroport", "Helvetica", sans-serif;
         font-size: 2.5vw;
         font-weight: normal;
         color: #222222;
