--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       }
 
       .container div {
-        padding: 2.5vw;
+        padding: 1.25vw;
         display: flex;
         background-color: #f3f3f3;
         aspect-ratio: 1;
@@ -120,6 +120,7 @@
 
       #split {
         background-image: url('00-split.jpg');
+        color: white;
       }
 
       #ads {
@@ -142,6 +143,7 @@
 
       #other {
         background-image: url('99-other.jpg');
+        color: white;
       }
 
 
