--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
       .container div {
         padding: 1.25vw;
+        padding-top: 0.25vw;
         display: flex;
         background-color: #f3f3f3;
         aspect-ratio: 1;
