--- a/index.html
+++ b/index.html
@@ -17,23 +17,28 @@
       	font-style: normal;
       }
 
+      :root {
+        --desktop-module: 1.25vw;
+        --desktop-module2x: 2.5vw;
+      }
+
       body {
-        margin: 1.25vw;
+        margin: var(--desktop-module);
         padding: 0;
         padding-bottom: 7.5vw;
       }
 
       * {
         font-family: "Aeroport", "Helvetica", sans-serif;
-        font-size: 2.5vw;
+        font-size: var(--desktop-module2x);
         font-weight: normal;
         color: #222222;
       }
 
       p {
-        font-size: 2vw;
+        font-size: var(--desktop-module);
         padding: 0;
-        margin-top: 2.5vw;
+        margin-top: var(--desktop-module);
         width: 45vw;
         display: block;
       }
@@ -45,15 +50,15 @@
       }
 
       .container {
-        margin-top: 1.25vw;
+        margin-top: var(--desktop-module);
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 1.25vw;
+        grid-gap: var(--desktop-module);
       }
 
       .container div {
-        padding: 1.25vw;
-        padding-top: 0.5vw;
+        padding: var(--desktop-module);
+        padding-top: var(--desktop-module);
         display: flex;
         background-color: #f3f3f3;
         aspect-ratio: 1;
@@ -64,7 +69,7 @@
 
       footer {
         display: block;
-        bottom: 2.5vw;
+        bottom: var(--desktop-module);
         position: fixed;
       }
 
