--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       * {
         font-family: "Aeroport", "Helvetica", sans-serif;
         font-size: var(--desktop-module2x);
+        line-height: var(--desktop-module2x);
         font-weight: normal;
         color: #222222;
       }
 
       p {
-        font-size: var(--desktop-module);
+        font-size: var(--desktop-module2x);
         padding: 0;
         margin-top: var(--desktop-module);
         width: 45vw;
@@ -156,7 +157,7 @@
     </style>
   </head>
   <body>
-    <h1>Anton Prokopev, partdirector</h1>
+    <h1>Anton Prokopev, Partdirector</h1>
     <div class="container">
       <div id="tba">TBA</div>
       <div id="fintech">Yandex Fintech</div>
