--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div id="other">Other</div>
     </div>
 
-    <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classifieds industries. He is responsible for brand developing and brand keeping for companies and individuals.</p>
+    <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classifieds industries. He&nbsp;is&nbsp;responsible for brand developing and brand keeping for companies and individuals.</p>
     <p>Currently in Yandex Fintech.</p>
 
     <footer>
