--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
         .container {
           grid-template-columns: 1fr 1fr;
         }
+
+        .header, .about {
+          display: block;
+          height: 47vw;
+        }
+
+
       }
 
       @media screen and (max-width: 640px) {
@@ -132,8 +139,7 @@
 
         .header, .about {
           display: block;
-          height: 90vw;
-          margin-bottom: 45vw;
+          height: 93vw;
         }
 
         .container {
