--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       body {
         margin: var(--desktop-module);
         padding: 0;
+        padding-bottom: 11vw;
       }
 
       * {
         font-family: "Aeroport", "Helvetica", sans-serif;
         font-size: var(--desktop-module2x);
         font-weight: normal;
+        line-height: 110%;
         color: #222222;
       }
 
@@ -98,7 +100,7 @@
 
 
 
-      @media screen and (min-width: 640px) and (max-width: 1280px) {
+      @media screen and (min-width: 720px) and (max-width: 1280px) {
         .container {
           grid-template-columns: 1fr 1fr;
         }
@@ -111,7 +113,7 @@
 
       }
 
-      @media screen and (max-width: 640px) {
+      @media screen and (max-width: 720px) {
         * {
           font-size: 10vw;
         }
