--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Anton Prokopev, Partdirector</title>
+    <title>Anton Prokopev, partdirector</title>
     <style>
       @font-face {
       	font-family: 'Aeroport';
@@ -48,6 +48,10 @@
         display: block;
         width: 45vw;
         margin-top: 0;
+      }
+
+      span {
+        color: #cccccc;
       }
 
       .container {
@@ -202,7 +206,7 @@
     </style>
   </head>
   <body>
-    <h1 class="header">Anton Prokopev,<br>Partdirector</h1>
+    <h1 class="header">Anton Prokopev,<br>partdirector</h1>
 
     <div class="container">
       <div id="tba">TBA</div>
