--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
 
-      @media (min-width: 720px) and (max-width: 1280px) {
+      @media screen and (min-width: 720px) and (max-width: 1280px) {
         .container {
           grid-template-columns: 1fr 1fr;
         }
@@ -117,7 +117,7 @@
 
       }
 
-      @media (min-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
+      @media screen and (max-width: 720px) {
         * {
           font-size: 10vw;
         }
