--- a/cv/index.html
+++ b/cv/index.html
@@ -9,22 +9,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Anton Prokopev CV, <br><span>also will be available in PDF soon</span></h1>
+    <h1>Anton Prokopev CV, <br><span>also will be available in&nbsp;PDF soon</span></h1>
     <h2 class="cvHeader">WORK</h2>
 
-    <p>Currently in Yandex Fintech,<br><span>head of visual communications</span></p>
+    <p>Currently in Yandex Fintech, <span>head of&nbsp;visual communications</span></p>
     <p>I have been working at <a href="http://yandex.com">Yandex</a> since 2016. This is one of the largest IT companies in Russia, which was traded on Nasdaq before the war.</p>
     <p>The company's business is based on search advertising, but it also has many other verticals. I&nbsp;am head of visual communications in the Fintech Department, and before that I&nbsp;was responsible for the communication design of Yandex Classifieds.</p>
     <p>In Fintech department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for Yandex Bank and the  Split BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects.</p>
 
-    <p>2016—2021, Yandex Classifieds,<br><span>head of visual communications</span></p>
-    <p>Yandex Classifieds include 4 verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded and created an inhouse design studio to solve marketing tasks. In 5 years we have grown this business from 1 to 10. We have grown the market share from 40% to 70%. We have also launched an offline dealer and service centers, online media about cars and a YouTube channel.</p>
+    <p>2016—2021, Yandex Classifieds,<br><span>head of&nbsp;visual communications</span></p>
+    <p>Yandex Classifieds include 4 verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded Auto.ru and created an inhouse design studio to solve marketing tasks.</p>
+    <p>In 5 years we have grown this business from 1 to 10. We have grown the market share from 40% to 70%. We have also launched an offline dealer and service centers, online media about cars and a YouTube channel.</p>
     <p>2014—2016, Infographics Studio, <span>team lead</span></p>
     <p>In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor.</p>
     <p>2007—2014, 16 Tons Club & UMC Agency, <span>graphic designer</span></p>
 
     <h2 class="cvHeader">STUDY</h2>
-    <p>2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus. <span>I've improved art director skills in&nbsp;a versatile practical course</span><p>
+    <p>2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus. <span>I've improved visual art direction skills in&nbsp;a&nbsp;versatile practical course</span><p>
     <p>2020, Cinema4d Online Course @&nbsp;C2D42. <span>I&nbsp;learned how to do simple and generative 3d&nbsp;modeling in order to create sketches, illustrations and mockups, as well as to brief contractors more accurately</span></p>
     <p>2016, Eike König (<a href="https://www.hort.org.uk/">HORT</a>) Workshop @ Strelka Institute. <span>We had a lot of fun at the creative two-day workshop</span></p>
     <p>2015, UI/UX Intensive @&nbsp;British High School Of&nbsp;Art &&nbsp;Design</p>
@@ -36,7 +37,7 @@
     <p>Work experience in both print and&nbsp;digital&nbsp;mediums. Experience managing team members, studios, freelancers and external vendors</p>
 
     <h2 class="cvHeader">OTHER</h2>
-    <p>I am a fan of road cycling. Favorite places to ride — Versilia and the road around the Geneva Sea.</p>
+    <p>I am a fan of road cycling. My favorite places to ride — Versilia and the road around the Geneva Sea.</p>
     <p>As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection burned down in a warehouse fire. Since then, Spotify has been enough for me.</p>
     <p>This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</p>
     <footer>
