--- a/cv/index.html
+++ b/cv/index.html
@@ -9,28 +9,37 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Anton Prokopev CV, <br><span>also will be available in&nbsp;PDF soon</span></h1>
+    <h1>Anton Prokopev CV, <br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
+
     <h2 class="cvHeader">WORK</h2>
 
-    <p>Currently in Yandex Fintech, <span>head of&nbsp;visual communications</span></p>
-    <p>I have been working at <a href="http://yandex.com">Yandex</a> since 2016. This is one of the largest IT companies in Russia, which was traded on Nasdaq before the war.</p>
-    <p>The company's business is based on search advertising, but it also has many other verticals. I&nbsp;am head of visual communications in the Fintech Department, and before that I&nbsp;was responsible for the communication design of Yandex Classifieds.</p>
-    <p>In Fintech department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for Yandex Bank and the  Split BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects.</p>
+    <p>1. Currently in Yandex Fintech, <span>head of&nbsp;visual communications</span></p>
 
-    <p>2016—2021, Yandex Classifieds,<br><span>head of&nbsp;visual communications</span></p>
-    <p>Yandex Classifieds include 4 verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded Auto.ru and created an inhouse design studio to solve marketing tasks.</p>
-    <p>In 5 years we have grown this business from 1 to 10. We have grown the market share from 40% to 70%. We have also launched an offline dealer and service centers, online media about cars and a YouTube channel.</p>
-    <p>2014—2016, Infographics Studio, <span>team lead</span></p>
-    <p>In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor.</p>
-    <p>2007—2014, 16 Tons Club & UMC Agency, <span>graphic designer</span></p>
+    <p class="hidden">I have been working at <a href="http://yandex.com">Yandex</a> since 2016. This is one of the largest IT companies in Russia, which was traded on Nasdaq before the war.</p>
+    <p class="hidden">The company's business is based on search advertising, but it also has many other verticals. I&nbsp;am head of visual communications in the Fintech Department, and before that I&nbsp;was responsible for the communication design of Yandex Classifieds.</p>
+    <p class="hidden">In Fintech Department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for the <a href="http://bank.yandex.ru">Yandex Bank</a> and the <a href="http://split.yandex.ru">Split</a> BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects.</p>
+
+    <p>2. 2016—2021, Yandex Classifieds,<br><span>head of&nbsp;visual communications</span></p>
+
+    <p class="hidden">Yandex Classifieds include 4 verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded Auto.ru and created an inhouse design studio to solve marketing tasks.</p>
+    <p class="hidden">In 5&nbsp;years we have grown this business from 1&nbsp;to 10. We have grown the market share from 40% to&nbsp;70%. We have also launched an offline dealer6 service centers, <a href="http://mag.auto.ru">online media about cars</a> and YouTube channel.</p>
+
+    <p>3. 2014—2016, Infographics Studio, <span>team&nbsp;lead</span></p>
+    <p class="hidden">In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor.</p>
+
+    <p>4. 2007—2014, 16 Tons Club & UMC Agency, <span>graphic designer</span></p>
 
     <h2 class="cvHeader">STUDY</h2>
-    <p>2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus. <span>I've improved visual art direction skills in&nbsp;a&nbsp;versatile practical course</span><p>
-    <p>2020, Cinema4d Online Course @&nbsp;C2D42. <span>I&nbsp;learned how to do simple and generative 3d&nbsp;modeling in order to create sketches, illustrations and mockups, as well as to brief contractors more accurately</span></p>
-    <p>2016, Eike König (<a href="https://www.hort.org.uk/">HORT</a>) Workshop @ Strelka Institute. <span>We had a lot of fun at the creative two-day workshop</span></p>
+    <p>2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus</p>
+    <p class="hidden"><span>I've improved visual art direction skills in&nbsp;a&nbsp;versatile practical course</span><p>
+    <p>2020, Cinema4d Online Course @&nbsp;C2D42</p>
+    <p class="hidden"><span>I&nbsp;learned how to do simple and generative 3d&nbsp;modeling in order to create sketches, illustrations and mockups, as well as to brief contractors more accurately</span></p>
+    <p>2016, Eike König (<a href="https://www.hort.org.uk/">HORT</a>) Workshop @ Strelka Institute</p>
+    <p class="hidden"><span>We had a lot of fun at the two-day creative workshop</span></p>
     <p>2015, UI/UX Intensive @&nbsp;British High School Of&nbsp;Art &&nbsp;Design</p>
     <p>2013, Intensive course in graphic design @&nbsp;Higher Academic School of Graphic Design</p>
-    <p>2004—2009, Moscow State Printing University. Engineering specialist degree in packaging design. <span>Here I received basic engineering and printing education. I studied classic engineering curriculum and also subjects like color theory and design printing techniques</span></p>
+    <p>2004—2009, Moscow State Printing University. Engineering specialist degree in packaging design</p>
+    <p class="hidden"><span>Here I received basic engineering and printing education. I studied classic engineering curriculum and also subjects like color theory and design printing techniques</span></p>
 
     <h2 class="cvHeader">SKILLS</h2>
     <p>Adobe Suite, Figma, Keynote, Cinema4D, Redshift, Html, Css, Github</p>
@@ -40,9 +49,17 @@
     <p>I am a fan of road cycling. My favorite places to ride — Versilia and the road around the Geneva Sea.</p>
     <p>As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection burned down in a warehouse fire. Since then, Spotify has been enough for me.</p>
     <p>This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</p>
-    <footer>
-      <a href="https://linkedin.com/in/prokopev/">Linkedin</a>,
-      <a href="https://t.me/aprokopiev">Tg</a>
-    </footer>
+    <div class="switcher">
+      <a class="switcherAnchor" href="#">More Details</a>, <a href="http://partdirector.ch">Back to works</a>
+    </div>
+
+    <script>
+    $(document).ready(function() {
+      $(".switcherAnchor").click(function(){
+          $(this).text($(this).text() == 'More Details' ? 'Less Details' : 'More Details');
+          $(document).find(".hidden").toggleClass('open');
+      });
+    });
+    </script>
   </body>
 </html>
