--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div>
 
     <footer>
+      <a href="https://partdirector.ch/cv/">CV</a>,
       <a href="https://linkedin.com/in/prokopev/">Linkedin</a>,
       <a href="https://t.me/aprokopiev">Tg</a>
     </footer>
