--- a/cv/index.html
+++ b/cv/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Anton Prokopev CV, <br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
+    <h1>Anton Prokopev<br> CV<br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
 
     <h2 class="cvHeader">WORK</h2>
 
@@ -46,9 +46,9 @@
     <p>Work experience in both print and&nbsp;digital&nbsp;mediums. Experience managing team members, studios, freelancers and external vendors</p>
 
     <h2 class="cvHeader">OTHER</h2>
-    <p>I am a fan of road cycling. My favorite places to ride — Versilia and the road around the Geneva Sea.</p>
-    <p>As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection burned down in a warehouse fire. Since then, Spotify has been enough for me.</p>
-    <p>This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</p>
+    <p>1. I am a fan of road cycling. My favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea.</p>
+    <p>2. As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection burned down in a warehouse fire. Since then, Spotify has been enough for me.</p>
+    <p>3. This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</p>
     <div class="switcher">
       <a class="switcherAnchor" href="#">More Details</a>, <a href="http://partdirector.ch">Back to works</a>
     </div>
