--- a/cv/index.html
+++ b/cv/index.html
@@ -50,7 +50,7 @@
     <p>2. As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection burned down in a warehouse fire. Since then, Spotify has been enough for me.</p>
     <p>3. This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</p>
     <div class="switcher">
-      <a class="switcherAnchor" href="#">More Details</a>, <a href="http://partdirector.ch">Back to works</a>
+      <a class="switcherAnchor" href="#">More Details</a>, <a href="https://partdirector.ch">Back to works</a>
     </div>
 
     <script>
