--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
 
     <div class="about">
-      <p>Anton&nbsp;— communication art director, team lead &&nbsp;designer in fintech and classified industries. He&nbsp;is&nbsp;responsible for brand developing and brand keeping for companies and individuals.</p>
-      <p>Currently in Yandex Fintech.</p>
+      <p>I&nbsp;am communication art director, team lead &&nbsp;designer in fintech and classified industries. I am responsible for brand developing and brand keeping for companies and individuals.</p>
+      <p>Currently in&nbsp;Yandex Fintech.</p>
     </div>
 
     <div class="project">
